# nmcmc-code

./: .gitignore  LICENSE  README.md
neumc/: README.md  setup.cfg
neumc/src/neumc/: __init__.py  mc.py  nis.py
neumc/src/neumc/nf/: __init__.py  affine_cpl.py  cs_cpl.py  flow.py  ncp.py  nn.py  sch_masks.py  u1_equiv.py  u1_masks.py  u1_model_asm.py  utils.py
neumc/src/neumc/physics/: __init__.py  phi4.py  schwinger.py  u1.py
neumc/src/neumc/splines/: __init__.py  cs.py
neumc/src/neumc/training/: __init__.py  forward.py  loss.py  train.py
neumc/src/neumc/utils/: __init__.py  calc_fnc.py  checkpoint.py  config.py  cpuinfo.py  errors.py  metrics.py  profile.py  scripts.py  stats_utils.py
nmcmc/: README.md  setup.cfg
nmcmc/LICENSE/: license.txt
nmcmc/src/monte_carlo/: nmcmc.py
nmcmc/src/normalizing_flow/: __init__.py  affine_couplings.py  circular_splines_equivariant_couplings.py  flow.py  gauge_equivariant.py  non_compact_projection.py  rational_splines_u1.py  schwinger_masks.py  u1_equivariant.py
nmcmc/src/phys_models/: U1.py  phi4.py  schwinger.py
nmcmc/src/training/: loss.py  train.py
nmcmc/src/utils/: __init__.py  calc_function.py  checkpoint.py  lattice_plots.py  (+5 more)
notebooks/: README.md  live_plot.py  mask_plots.py
notebooks/Normalizing Flows/: gauss.Rmd
notebooks/Schwinger/: dag.Rmd  memory.Rmd  schwinger.Rmd  timings.Rmd  tree.Rmd
notebooks/U1/: U1.Rmd  U1_rs.Rmd
notebooks/misc/: masks.Rmd
notebooks/phi4/: phi4.Rmd
scripts/: README.md  dag.py  memory.py  nmcmc.py  phi4.py  run_all.sh  run_all_u1.sh  schwinger.py  timings.py  u1.py
