[metadata]
name = neumc
version = 1.0.0
author = Piotr Białas
author_email = piotr.bialas@uj.edu.pl
description = A set of Neural Monte-Carlo implementation modules
long_description = file: README.md
long_description_content_type = text/markdown


classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir=
    =src
packages=find:

[options.packages.find]
where=src

python_requires = >=3.10
